--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "defi-tutorial",
+  "name": "defi-staking",
   "version": "0.1.0",
   "description": "DeFi Token Staking App",
-  "author": "gregory@dappuniversity.com",
+  "author": "talentdev0901@gmail.com",
+  "homepage": ".",
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
@@ -18,7 +19,7 @@
     "react": "16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^5.0.0",
     "truffle": "5.1.39",
     "web3": "1.2.11"
   },
